# terminal-layouts

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: zellij-malware.tape
generators/: common.py  gen-tmux.py  gen-zellij.py  validate.py
manifest/: defaults.yaml
shell/: tmux-layouts.zsh  zellij-layouts.zsh
terminal_layouts/: __init__.py  cli.py  common.py  gen_tmux.py  gen_zellij.py  validate.py
terminal_layouts/manifest/: schema.json
terminal_layouts/manifest/workflows/: claude-projects.yaml  ctf.yaml  docker.yaml  malware-analysis.yaml  osint.yaml  pentest.yaml  project.yaml
tests/: parity-check.py  test-idempotence.sh  test-parity.sh
